Blender crashes when using context.temp_override with bpy.ops.object.mode_set in some cases #129578

Closed
opened 2024-10-30 09:06:15 +01:00 by fmnijk · 1 comment

System Information
Operating system:Windows 10
Graphics card:4090

Blender Version
Broken: 4.2.3, 4.4.0 Alpha 4b842b8330
Worked: none

Short description of error
I encountered a crash in Blender while executing a script that uses the context.temp_override function along with bpy.ops.object.mode_set(mode='POSE') in some cases. I have made efforts to shorten the script to isolate the issue.

Exact steps for others to reproduce the error

  1. Active an armature.
  2. Run the script in text editor.
import bpy
from typing import Optional, List


def temp_override_objects(
    context: bpy.types.Context,
    window: Optional[bpy.types.Window] = None,
    area: Optional[bpy.types.Area] = None,
    region: Optional[bpy.types.Region] = None,
    active_object: Optional[bpy.types.Object] = None,
    selected_objects: Optional[List[bpy.types.Object]] = None,
    **keywords,
):
    if active_object is not None:
        keywords["active_object"] = active_object
        keywords["object"] = active_object

    if selected_objects is not None:
        keywords["selected_objects"] = selected_objects
        keywords["selected_editable_objects"] = selected_objects

    return context.temp_override(window=window, area=area, region=region, **keywords)

obj = bpy.context.active_object
if obj and obj.type == 'ARMATURE':
    with temp_override_objects(
        bpy.context,
        active_object=obj,
        selected_objects=[obj],
    ):
        bpy.ops.object.mode_set(mode='POSE')

Expected behavior
Blender should switch to Pose mode without crashing.

Actual behavior
Blender crashes immediately after running the script.

**System Information** Operating system:Windows 10 Graphics card:4090 **Blender Version** Broken: 4.2.3, 4.4.0 Alpha 4b842b83306e Worked: none **Short description of error** I encountered a crash in Blender while executing a script that uses the context.temp_override function along with bpy.ops.object.mode_set(mode='POSE') in some cases. I have made efforts to shorten the script to isolate the issue. **Exact steps for others to reproduce the error** 1. Active an armature. 2. Run the script in text editor. ```Py import bpy from typing import Optional, List def temp_override_objects( context: bpy.types.Context, window: Optional[bpy.types.Window] = None, area: Optional[bpy.types.Area] = None, region: Optional[bpy.types.Region] = None, active_object: Optional[bpy.types.Object] = None, selected_objects: Optional[List[bpy.types.Object]] = None, **keywords, ): if active_object is not None: keywords["active_object"] = active_object keywords["object"] = active_object if selected_objects is not None: keywords["selected_objects"] = selected_objects keywords["selected_editable_objects"] = selected_objects return context.temp_override(window=window, area=area, region=region, **keywords) obj = bpy.context.active_object if obj and obj.type == 'ARMATURE': with temp_override_objects( bpy.context, active_object=obj, selected_objects=[obj], ): bpy.ops.object.mode_set(mode='POSE') ``` **Expected behavior** Blender should switch to Pose mode without crashing. **Actual behavior** Blender crashes immediately after running the script.
fmnijk added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-10-30 09:06:16 +01:00
Member

I can confirm the crash. Here is a simplified version of the script.

The crash seems to occur when window = None, which according to the Blender Python API documenation is an accepted input: https://docs.blender.org/api/current/bpy.types.Context.html#bpy.types.Context.temp_override

import bpy

obj = bpy.context.active_object
if obj and obj.type == 'ARMATURE':
    keywords = {}
    keywords["active_object"] = bpy.context.active_object
    with bpy.context.temp_override(window=None, **keywords):
        bpy.ops.object.mode_set(mode='POSE')
I can confirm the crash. Here is a simplified version of the script. The crash seems to occur when `window = None`, which according to the Blender Python API documenation is an accepted input: https://docs.blender.org/api/current/bpy.types.Context.html#bpy.types.Context.temp_override ```python import bpy obj = bpy.context.active_object if obj and obj.type == 'ARMATURE': keywords = {} keywords["active_object"] = bpy.context.active_object with bpy.context.temp_override(window=None, **keywords): bpy.ops.object.mode_set(mode='POSE') ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-11-05 04:12:20 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#129578
No description provided.