Fix #129578: Crash setting pose mode using Context.temp_override(..)